HHH-8145 - Add MaxPermSize to test configuration